# delacao-premiada

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml  requirements.txt
delacao/: __main__.py  classifier.py  clockify.py  collector.py  config.py  db.py  jira.py  segmenter.py  web.py
delacao/static/: index.html
deploy/: delacao.service
docs/adr/: 0001-captura-por-metadados-sem-screenshots.md  0002-escrita-no-clockify-pos-aprovacao.md
tests/: test_classifier.py  test_segmenter.py
