[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "delacao-premiada"
version = "0.2.0"
description = "Rastreador local de tempo que propõe os Lançamentos do dia no Clockify"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    'python-xlib>=0.33; sys_platform == "linux"',
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
delacao = "delacao.__main__:main"

[tool.setuptools]
packages = ["delacao"]

[tool.setuptools.package-data]
delacao = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
